fixes over thick left margin spacing introduced in last commit

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,6 +14,7 @@ body > .wrapper { height: auto; min-height: 100%; }
 #probes {
     display:none;
     margin-left: 0;
+    padding-left:0;
     clear:all;
 }
 
